--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root" class="bg-slate-200"></div>
+    <script type="module" src="./frontend/main.jsx"></script>
   </body>
 </html>
